gh-1469 Revert AppConfig to how it was